==> exxstence/CanSat-KOMETOS/Core/Src/ICM42688.cpp <==
#include "altMain.hpp"
#include "ICM42688.h"
#include "ICM42688_registers.h"
#include "string.h"

int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {
  /* write data to device */
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_RESET);
  HAL_SPI_Transmit(_spi, &subAddress, 1, 50);
  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_SPI_Transmit(_spi, &data, 1, 50);
  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_SET);


  HAL_Delay(10);

  /* read back the register */
  readRegisters(subAddress, 1, _buffer);
  /* check the read back register against the written register */
  if(_buffer[0] == data) {
    return 1;
  }
  else{
    return -1;
  }
}

int ICM42688::readRegisters(uint8_t subAddress, uint8_t count, uint8_t* dest) {

  uint8_t address = subAddress;
  uint8_t data = address | 0x80;
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_RESET);
  HAL_SPI_Transmit(_spi, &data, 1, 50);
  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_SPI_Receive(_spi, dest, count, 50);

  while(HAL_SPI_GetState(_spi) == HAL_SPI_STATE_BUSY);
  HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_SET);

  return 1;
}
